<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <!-- 顶部应用栏演示的标题 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_title">Top App Bar</string>
  <!--顶部应用栏演示的说明[CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_description">顶部应用栏以前称为 Android 中的操作栏，是一种特殊的工具栏，用于品牌、导航、搜索和操作.</string>
  <string name="cat_topappbar_scrolling_title" translatable="false">Scrolling Demo(滚动演示)</string>
  <string name="cat_topappbar_scrolling_transparent_title" translatable="false">Scrolling Demo (transparent status bar)(滚动演示(透明状态栏))</string>
  <string name="cat_topappbar_collapsing_medium_title" translatable="false">Collapsing Demo (Medium)(折叠演示(中))</string>
  <string name="cat_topappbar_collapsing_large_title" translatable="false">Collapsing Demo (Large)(折叠演示(大))</string>
  <string name="cat_topappbar_toolbar_title" translatable="false">Toolbar Demo(工具栏演示)</string>
  <string name="cat_topappbar_collapsing_multiline_title" translatable="false">Collapsing Demo (Multiline title)(折叠演示(多行标题))</string>
  <string name="cat_topappbar_action_bar_title" translatable="false">Action Bar Demo(操作栏演示)</string>
  <string name="cat_topappbar_collapsing_parallax_title" translatable="false">Parallax Demo(视差演示)</string>
  <string name="cat_topappbar_dark_action_bar_title" translatable="false">Dark Action Bar Demo(黑暗模式的操作栏演示)</string>
  <string name="cat_topappbar_preferences_demo_title" translatable="false">Preferences Demo(设置演示)</string>
  <string name="cat_topappbar_preferences_toolbar_title" translatable="false">Preferences(设置)</string>

  <string name="cat_topappbar_lorem_ipsum" translatable="false">
    \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    \n\n\t\tSuspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.
    \n\n\t\tSed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.
    \n\n\t\tAenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.
    \n\n\t\tPhasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
  </string>
  <!-- 常规工具栏演示的标题[CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_main_demo_toolbar_title">常规标题</string>
  <!-- 滚动工具栏演示的标题 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_scrolling_demo_toolbar_title">Scrolling Title(滚动标题)</string>
  <!-- 中等折叠工具栏演示的标题 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_collapsing_demo_toolbar_medium_title">Collapsing Title Medium Size(中等折叠标题)</string>
  <!-- 大型折叠工具栏演示的标题 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_collapsing_demo_toolbar_large_title">Collapsing Title Large Size(大型等折叠标题)</string>
  <!-- 菜单中按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_edit_menu_item_title">Edit</string>
  <!-- 菜单中按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_favorite_menu_item_title">Favorite</string>
  <!-- 菜单中按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_settings_menu_item_title">Settings</string>
  <!-- 菜单中按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_help_and_feedback_menu_item_title">Help &amp; feedback</string>
  <!--副标题 示例[CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_subtitle">Subtitle text(副标题)</string>
  <!-- AppBar组件的描述 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_description">
    Material Components 主题中的操作栏将默认使用 textAppearanceHeadline6 的 titleTextStyle 和 textAppearanceSubtitle1 的 subtitleTextStyle。
    \n\n此外，材质操作栏的高度在纵向和横向上将相同，以避免上述文本外观的垂直空间问题。
  </string>
  <!-- 用于切换操作模式的按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_toggle_action_mode_button">Toggle Action Mode(切换ActionMode)</string>
  <!-- 用于切换操作模式的按钮的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_action_mode_title">Action Mode Title(ActionMode标题)</string>
  <!-- Sample subtitle [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_action_mode_subtitle">Action Mode Subtitle(ActionMode副标题)</string>
  <!-- 菜单中的示例操作 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_action_mode_menu_item1">Action 1</string>
  <!-- 菜单中的示例操作 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_action_bar_action_mode_menu_item2">Action 2</string>
  <!-- 长标题示例 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_collapsing_multiline_demo_toolbar_title" description="Long title [CHAR_LIMIT=NONE]">该折叠标题非常长，因此将显示在多行中。</string>
  <!-- 用于更改最大行数的按钮标签 [CHAR_LIMIT=32] -->
  <string name="menu_max_lines">Max lines = <xliff:g id="max">%d</xliff:g></string>

  <!-- 显示工具栏配置弹出窗口的按钮标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_toolbars">Configure Toolbars(配置工具栏)</string>
  <!-- 用于配置工具栏标题的文本字段的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_title_text">Title Text(标题文本)</string>
  <!-- 用于配置工具栏副标题的文本字段的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_subtitle_text">Subtitle Text(副标题文本)</string>
  <!-- 用于配置工具栏标题居中的复选框的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_centered">Centered(居中)</string>
  <!-- 用于配置工具栏导航图标的复选框的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_navigation_icon">Navigation Icon(导航图标)</string>
  <!-- 用于配置工具栏菜单项的复选框的标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_menu_items">Menu Items</string>
  <!-- 用于应用工具栏配置的按钮标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_apply_button">Apply</string>
  <!-- 用于取消工具栏配置的按钮标签 [CHAR_LIMIT=NONE] -->
  <string name="cat_topappbar_configure_cancel_button">Cancel</string>

  <!-- 徽章增量按钮标签 -->
  <string name="cat_topappbar_increment_badge_number" description="用于增加通知编号的按钮的标题. [CHAR_LIMIT=20]">+Badge number</string>
  <!-- 徽章增量按钮标签 -->
  <string name="cat_topappbar_edit_menu_toggle" description="用于在显示和隐藏编辑菜单之间切换的开关的标题. [CHAR_LIMIT=NONE]">Show edit menu</string>
  <string name="cat_topappbar_lift_on_scroll_toggle" description="用于在启用和禁用滚动提升之间切换的开关的标题。 [CHAR_LIMIT=NONE]">Enable lift on scroll(启用滚动提升)</string>
  <string name="cat_topappbar_lifted" description="用于在抬起和不抬起应用栏之间切换的开关的标题. [CHAR_LIMIT=NONE]">Lift the app bar(抬起应用栏)</string>

  <string name="cat_topappbar_compress_effect_demo_title">Compress Effect Demo(压缩效果 演示)</string>
  <string name="cat_topappbar_compress_toolbar_title">Compress Title(压缩标题)</string>
  <string name="cat_topappbar_compress_show_tabs_toggle_label">Show tabs</string>
  <string name="cat_topappbar_compress_hide_tabs_toggle_label">Hide tabs</string>
  <string name="cat_topappbar_compress_show_toolbar_toggle_label">Show toolbar</string>
  <string name="cat_topappbar_compress_hide_toolbar_toggle_label">Hide toolbar</string>

  <string name="cat_topappbar_tabs_label_all">All</string>
  <string name="cat_topappbar_tabs_label_shopping">Shopping</string>
  <string name="cat_topappbar_tabs_label_news">News</string>
  <string name="cat_topappbar_tabs_label_maps">Maps</string>
  <string name="cat_topappbar_tabs_label_images">Images</string>
  <string name="cat_topappbar_tabs_label_updates">Updates</string>
  <string name="cat_topappbar_tabs_label_settings">Settings</string>
  <string name="cat_topappbar_tabs_label_plugins">Plugins</string>
  <string name="cat_topappbar_tabs_label_more">More</string>
</resources>
